Fixed the padding between inline-blocks with align: top

--- a/styles.sass
+++ b/styles.sass
@@ -485,6 +485,7 @@ body
   width: 50%
   height: 50%
   display: inline-block
+  vertical-align: top
  
 .crate
   background:
